Fixed the incorrect positioning-styling in the actions-tab on Safari-only when using the Default-, Alternate-, Classic- and Basecamp-themea. This error was fixed for the Squeejee-theme already in r119.
This commit references issue #250.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/trunk@120 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -107,7 +107,8 @@ html>body #content {
 }
 
 /***** The actions tab *****/
-#main #leftmenu-default #leftmenu #tab-content-actions-tab {
+#main #leftmenu-default #leftmenu #tab-content-actions-tab h3 {
+    margin-top: 15px;
 }
 
 /***** The menus tab *****/
@@ -253,7 +254,8 @@ html>body #content {
 }
 
 /***** The actions tab *****/
-#main #leftmenu-alternate #leftmenu #tab-content-actions-tab {
+#main #leftmenu-alternate #leftmenu #tab-content-actions-tab h3 {
+    margin-top: 15px;
 }
 
 /***** The menus tab *****/
@@ -400,7 +402,8 @@ html>body #content {
 }
 
 /***** The actions tab *****/
-#main #leftmenu-classic #leftmenu #tab-content-actions-tab {
+#main #leftmenu-classic #leftmenu #tab-content-actions-tab h3 {
+    margin-top: 15px;
 }
 
 /***** The menus tab *****/
@@ -548,7 +551,8 @@ html>body #content {
 }
 
 /***** The actions tab *****/
-#main #leftmenu-basecamp #leftmenu #tab-content-actions-tab {
+#main #leftmenu-basecamp #leftmenu #tab-content-actions-tab h3 {
+    margin-top: 15px;
 }
 
 /***** The menus tab *****/
